--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.29.0",
+    "@google/genai": "^1.13.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "drizzle-orm": "^0.41.0",
+    "mime": "^4.0.7",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
