--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,13 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/catalyst"
 
+# Clerk Authentication
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_..."
+CLERK_SECRET_KEY="sk_test_..."
+
+# Optional: Clerk webhook endpoint secret (for production webhooks)
+# CLERK_WEBHOOK_SECRET="whsec_..."
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
